--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,6 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_choose_game">ChooseGameActivity</string>
+    <string name="title_activity_scratch_game">ScratchGameActivity</string>
 
 </resources>
