--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,6 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_choose_game">ChooseGameActivity</string>
     <string name="title_activity_scratch_game">ScratchGameActivity</string>
+    <string name="title_activity_coloring_game">ColoringGameActivity</string>
 
 </resources>
