--- a/LittleFamilyApp/src/main/res/values/strings.xml
+++ b/LittleFamilyApp/src/main/res/values/strings.xml
@@ -12,5 +12,6 @@
     <string name="title_activity_choose_game">ChooseGameActivity</string>
     <string name="title_activity_scratch_game">ScratchGameActivity</string>
     <string name="title_activity_coloring_game">ColoringGameActivity</string>
+    <string name="title_activity_heritage_dress_up">HeritageDressUpActivity</string>
 
 </resources>
