--- a/LittleFamilyApp/src/main/res/values/strings.xml
+++ b/LittleFamilyApp/src/main/res/values/strings.xml
@@ -14,5 +14,8 @@
     <string name="title_activity_coloring_game">ColoringGameActivity</string>
     <string name="title_activity_heritage_dress_up">HeritageDressUpActivity</string>
     <string name="title_activity_choose_culture">ChooseCultureActivity</string>
+    <string name="calculating_heritage">Calculating your heritage.
+Please wait...</string>
+    <string name="choose_culture">Choose a culture to dress up...</string>
 
 </resources>
