--- a/LittleFamilyApp/src/main/res/values/strings.xml
+++ b/LittleFamilyApp/src/main/res/values/strings.xml
@@ -17,12 +17,13 @@
     <string name="calculating_heritage">Calculating your heritage.
 Please wait...</string>
     <string name="choose_culture">Choose a culture to dress up...</string>
-	<string name="you_are_percent">You are %1$.1f percent from %2$s from your %3$s.</string>
+	<string name="you_are_percent">You are %1$s percent from %2$s from your %3$s.</string>
     <string name="name_born_in">%1$s, was born in %2$s.</string>
     <string name="name_born_in_date">%1$s, was born in %2$s on %3$s.</string>
 	<string name="father">Father</string>
 	<string name="mother">Mother</string>
 	<string name="grand">Grand</string>
 	<string name="great">Great</string>
-	
+    <string name="play">Play!</string>
+
 </resources>
