Start of puzzle game

--- a/LittleFamilyApp/src/main/res/values/strings.xml
+++ b/LittleFamilyApp/src/main/res/values/strings.xml
@@ -33,5 +33,6 @@ Please wait...</string>
     <string name="remote_service_explanation">LittleFamily connects to an online FamilyTree service to get its data.  You will be asked to login to your online FamilyTree through one of the provided services.  LittleFamily will then allow you to play and interact with your FamilyTree in a new and unique way.</string>
     <string name="choose_service_below">Choose from one of the support online FamilyTree services below:</string>
     <string name="title_activity_splash">SplashActivity</string>
+    <string name="title_activity_puzzle_game">PuzzleGameActivity</string>
 
 </resources>
