--- a/LittleFamilyApp/src/main/res/values/strings.xml
+++ b/LittleFamilyApp/src/main/res/values/strings.xml
@@ -26,7 +26,7 @@ Please wait...</string>
 	<string name="grand">Grand</string>
 	<string name="great">Great</string>
     <string name="play">Play!</string>
-    <string name="player_greeting">Hi %1$s!</string>
+    <string name="player_greeting">Hi, %1$s!</string>
     <string name="what_game">What would you like to play?</string>
     <string name="title_activity_choose_remote_service">ChooseRemoteService</string>
     <string name="choose_remote_service">Choose the online FamilyTree:</string>
