--- a/LittleFamilyApp/src/main/res/values/strings.xml
+++ b/LittleFamilyApp/src/main/res/values/strings.xml
@@ -36,4 +36,7 @@ Please wait...</string>
     <string name="title_activity_puzzle_game">PuzzleGameActivity</string>
     <string name="title_activity_home">HomeActivity</string>
 
+<!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
 </resources>
