--- a/LittleFamilyApp/src/main/res/values/strings.xml
+++ b/LittleFamilyApp/src/main/res/values/strings.xml
@@ -49,5 +49,6 @@ Please wait...</string>
 <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_my_tree">My Tree</string>
+    <string name="title_activity_bubble_pop">Bubble Pop Activity</string>
 
 </resources>
