--- a/LittleFamilyApp/src/main/res/values/strings.xml
+++ b/LittleFamilyApp/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Little Family</string>
+    <string name="app_name">Little Family Tree</string>
     <string name="prompt_fsusername">FamilySearch Username</string>
     <string name="prompt_pgvusername">PhpGedView Username</string>
     <string name="title_activity_choose_family_member">Who is playing today?</string>
