--- a/LittleFamilyApp/src/main/res/values/strings.xml
+++ b/LittleFamilyApp/src/main/res/values/strings.xml
@@ -53,7 +53,7 @@ Please wait...</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_my_tree">My Tree</string>
     <string name="title_activity_bubble_pop">Bubble Pop Activity</string>
-    <string name="adult_auth_explanation">In an effort to prevent children from accidentally changing settings, please enter the password for your online family tree account in order to continue.</string>
+    <string name="adult_auth_explanation">Please enter the password for your online family tree account in order to continue.</string>
     <string name="cancel">Cancel</string>
 
 </resources>
