--- a/LittleFamilyApp/src/main/res/values/strings.xml
+++ b/LittleFamilyApp/src/main/res/values/strings.xml
@@ -83,6 +83,7 @@ Please wait...</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="gender">Gender</string>
     <string name="birthDate">Birth Date</string>
+	<string name="birthYear">Birth Year</string>
     <string name="birthPlace">Birth Place</string>
     <string name="living">Living</string>
     <string name="nationality">Nationality</string>
