--- a/LittleFamilyApp/src/main/res/values/strings.xml
+++ b/LittleFamilyApp/src/main/res/values/strings.xml
@@ -23,8 +23,16 @@ Please wait...</string>
     <string name="name_born_in_date">%1$s, was born in %2$s on %3$s.</string>
 	<string name="father">Father</string>
 	<string name="mother">Mother</string>
+	<string name="husband">Husband</string>
+	<string name="wife">Wife</string>
 	<string name="grand">Grand</string>
 	<string name="great">Great</string>
+	<string name="son">Son</string>
+	<string name="daughter">Daughter</string>
+	<string name="brother">Brother</string>
+	<string name="sister">Sister</string>
+	<string name="inlaw">In-Law</string>
+	<string name="parent">Parent</string>
     <string name="play">Play!</string>
     <string name="player_greeting">Hi, %1$s!</string>
     <string name="what_game">What would you like to play?</string>
@@ -41,6 +49,7 @@ Please wait...</string>
     <string name="born_in_on">%1$s was born in %2$s on %3$s.</string>
     <string name="he">He</string>
     <string name="she">She</string>
+	<string name="you">You</string>
     <string name="you_are">You are %1$s.</string>
     <string name="you_born_in">You were born in %1$s.</string>
     <string name="you_born_on">You were born on %1$s.</string>
