--- a/LittleFamilyApp/src/main/res/values/strings.xml
+++ b/LittleFamilyApp/src/main/res/values/strings.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
-    <string name="app_name">Little Family Tree</string>
     <string name="prompt_fsusername">FamilySearch Username</string>
     <string name="prompt_pgvusername">PhpGedView Username</string>
     <string name="title_activity_choose_family_member">Who is playing today?</string>
@@ -33,6 +31,11 @@ Please wait...</string>
 	<string name="sister">Sister</string>
 	<string name="inlaw">In-Law</string>
 	<string name="parent">Parent</string>
+    <string name="cousin">Cousin</string>
+    <string name="aunt">Aunt</string>
+    <string name="uncle">Uncle</string>
+    <string name="niece">Niece</string>
+    <string name="nephew">Nephew</string>
 	
 	<string name="great3">Third</string>
 	<string name="great4">Fourth</string>
