Adding KidHeritage to the parent's guide

--- a/LittleFamilyApp/src/main/res/values/strings.xml
+++ b/LittleFamilyApp/src/main/res/values/strings.xml
@@ -132,5 +132,7 @@ Please wait...</string>
     <string name="choose_dancers">Place your dancers on stage</string>
     <string name="visit_website">Visit Our Website</string>
     <string name="visit_web_desc">Visit our website for more details, videos, and tutorials about the games in Little Family Tree.</string>
+    <string name="title_guide_more">More Family History For Children</string>
+    <string name="guide_kidsheritage">Teach your children more about their heritage with their own personal heritage book. Use coupon code LTFAMTR316 for free shipping!</string>
 
 </resources>
