Adding piano animation

--- a/LittleFamilyApp/src/main/res/values/strings.xml
+++ b/LittleFamilyApp/src/main/res/values/strings.xml
@@ -93,7 +93,7 @@ Please wait...</string>
     <string name="title_full_tree">More Photos, More Fun!</string>
     <string name="guide_full_photo_tree">The more information--especially photos--that you add to your online family tree, the more fun Little Family Tree will be for your child!</string>
     <string name="title_welcome">Welcome!</string>
-    <string name="guide_welcome_text">Little Family Tree engages young children with their personal family history through photos, games, and activities designed for their level. (Most of the games are fun for the kid in all of us.)</string>
+    <string name="guide_welcome_text">Little Family Tree engages young children with their personal family history through games and activities designed for their level. (Most of the games are fun for the kid in all of us.)</string>
     <string name="guide_engage_children">Playing with your child will give you the opportunity to strengthen family associations and enhance the experience through your personal memories and stories.</string>
     <string name="title_play_together">Play Together!</string>
     <string name="title_guide_choose_player">Choosing a Player</string>
