--- a/LittleFamilyApp/src/main/res/values/strings.xml
+++ b/LittleFamilyApp/src/main/res/values/strings.xml
@@ -137,5 +137,6 @@ Please wait...</string>
     <string name="title_activity_my_heritage_login">MyHeritage Login</string>
 
     <string name="low_tree_level">The game is still loading data.  As more data is loaded, the calculations will get more accurate.  Please try again in a few minutes.  You may continue to play while more data is loaded in the background.</string>
+    <string name="title_activity_birthday_card">BirthdayCardActivity</string>
 
 </resources>
