--- a/LittleFamilyApp/src/main/res/values/strings.xml
+++ b/LittleFamilyApp/src/main/res/values/strings.xml
@@ -52,7 +52,7 @@ Please wait...</string>
     <string name="great14">Fourteenth</string>
 
     <string name="play">Play!</string>
-    <string name="player_greeting">Hi, %1$s!</string>
+    <string name="player_greeting">Hi %1$s!</string>
     <string name="what_game">What would you like to play?</string>
     <string name="title_activity_choose_remote_service">ChooseRemoteService</string>
     <string name="choose_remote_service">Choose the online FamilyTree:</string>
