Columbia clothing show my family on search

--- a/LittleFamilyApp/src/main/res/values/strings.xml
+++ b/LittleFamilyApp/src/main/res/values/strings.xml
@@ -140,5 +140,6 @@ Please wait...</string>
     <string name="title_activity_birthday_card">BirthdayCardActivity</string>
     <string name="decorate_a_card">Decorate a birthday card for </string>
     <string name="record_audio_instr">Tap the audio button to record the person\'s given name. Press the stop button to stop recording. Press the play button to hear the recorded name. Press the delete button to remove the recording.</string>
+    <string name="show_family">Show My Family</string>
 
 </resources>
