--- a/LittleFamilyApp/src/main/res/values/strings.xml
+++ b/LittleFamilyApp/src/main/res/values/strings.xml
@@ -80,6 +80,7 @@ Please wait...</string>
     <string name="title_activity_my_tree">My Tree</string>
     <string name="title_activity_bubble_pop">Bubble Pop Activity</string>
     <string name="adult_auth_explanation">Please enter the password for your online family tree account in order to continue.</string>
+    <string name="adult_auth_explanation2">In order to continue, please enter the year %1$s was born.</string>
     <string name="cancel">Cancel</string>
     <string name="title_activity_person_search">PersonSearchActivity</string>
     <string name="given_name">Given Name</string>
