--- a/LittleFamilyApp/src/main/res/values/strings.xml
+++ b/LittleFamilyApp/src/main/res/values/strings.xml
@@ -102,7 +102,7 @@ Please wait...</string>
     <string name="title_guide_home">Home Activity</string>
     <string name="guide_home_activity">The home is the hub of the game.  Tap around and explore to find interactive elements.  You may need to help the youngest to get started.  Return anytime by using the home button at the top of every screen.</string>
     <string name="title_guide_follow_the_stars">Follow the Stars!</string>
-    <string name="guide_follow_stars">Special games and activities are highlighted by stars on the home screen.  Follow the stars to interact in fun and unique ways with your relatives.</string>
+    <string name="guide_follow_stars">Portals to special games and activities are highlighted by stars on the home screen. Tap the items behind the stars to start those activities. Yellow stars highlight free activities, and red stars highlight premium activities.  You may try a premium activity up to 3 times after which a premium upgrade will be required to continue playing that activity. A one-time premium upgrade may be purchased at anytime.</string>
     <string name="title_guide_settings">Settings</string>
     <string name="guide_settings">Parents may alter app settings through the manage settings button found on any screen.  You must enter the password for your online tree account in order to access the settings.  This prevents children from accidentally changing the settings.</string>
     <string name="guide_more_settings">From the settings you can manage your connection to your online family tree and change synchronization settings.  You can also choose to hide people from your online tree so that they do not show up in Little Family Tree.</string>
