Settings for skin color

--- a/LittleFamilyApp/src/main/res/values/strings.xml
+++ b/LittleFamilyApp/src/main/res/values/strings.xml
@@ -92,17 +92,17 @@ Please wait...</string>
     <string name="title_activity_song">SongActivity</string>
     <string name="title_activity_parents_guide">Parent\'s Guide</string>
     <string name="title_full_tree">More Photos, More Fun!</string>
-    <string name="guide_full_photo_tree">The more information--especially photos--that you add to your online family tree, the more fun Little Family Tree will be for your child!</string>
+    <string name="guide_full_photo_tree">The family history data used in the games comes from an adult's online family tree. The more information--especially photos--that you add to your online tree, the more fun Little Family Tree will be for your child. This app can read the data from the online tree, but DOES NOT change the online tree.</string>
     <string name="title_welcome">Welcome!</string>
     <string name="guide_welcome_text">Little Family Tree engages young children with their personal family history through games and activities designed for their level. (Most of the games are fun for the kid in all of us.)</string>
     <string name="guide_engage_children">Playing with your child will give you the opportunity to strengthen family associations and enhance the experience through your personal memories and stories.</string>
     <string name="title_play_together">Play Together!</string>
     <string name="title_guide_choose_player">Choosing a Player</string>
-    <string name="guide_choosing_player">The games and activities in Little Family Tree are centered around the person who is playing.  You may choose a different person by using the back button or tapping the profile picture on the activity screens.</string>
+    <string name="guide_choosing_player">The games and activities in Little Family Tree are centered around the person who is playing and their relationships to family members. You may choose a different player by tapping the player's picture on any screen.</string>
     <string name="title_guide_home">Home Activity</string>
-    <string name="guide_home_activity">The home is the hub of the game.  Tap around and explore to find interactive elements.  You may need to help the youngest to get started.  Return anytime by using the home button at the top of every screen.</string>
+    <string name="guide_home_activity">There is very little text used in the app, making it easy for even the youngest child to play.  The home screen is the hub of the game.  Return home anytime by using the home button at the top of every screen.</string>
     <string name="title_guide_follow_the_stars">Follow the Stars!</string>
-    <string name="guide_follow_stars">Portals to special games and activities are highlighted by stars on the home screen. Tap the items behind the stars to start those activities. Yellow stars highlight free activities, and red stars highlight premium activities.  You may try a premium activity up to 3 times after which a premium upgrade will be required to continue playing that activity. A one-time premium upgrade may be purchased at anytime.</string>
+    <string name="guide_follow_stars">Game portals are highlighted by twinkling stars on the home screen. Tap where the stars appear to enter a game. Yellow stars highlight free activities. Red stars highlight premium activities. You may try a premium activity three times; upgrade to continue playing premium games.</string>
     <string name="title_guide_settings">Settings</string>
     <string name="guide_settings">Parents may alter app settings through the manage settings button found on any screen.  You must enter the password for your online tree account in order to access the settings.  This prevents children from accidentally changing the settings.</string>
     <string name="guide_more_settings">From the settings you can manage your connection to your online family tree and change synchronization settings.  You can also choose to hide people from your online tree so that they do not show up in Little Family Tree.</string>
